@@ -11151,7 +11151,7 @@
             "radius": 1310720
         },
         {
-            "flags": 528,
+            "flags": 2147484176,
             "health": 1000,
             "height": 1048576,
             "id": -1,
@@ -11226,7 +11226,7 @@
             "radius": 720896
         },
         {
-            "flags": 528,
+            "flags": 2147484176,
             "health": 1000,
             "height": 1048576,
             "id": -1,
@@ -11276,7 +11276,7 @@
             "radius": 3145728
         },
         {
-            "flags": 67088,
+            "flags": 2147550736,
             "health": 1000,
             "height": 524288,
             "id": -1,
@@ -11451,7 +11451,7 @@
             "radius": 1572864
         },
         {
-            "flags": 67088,
+            "flags": 2147550736,
             "health": 1000,
             "height": 524288,
             "id": -1,
@@ -11776,7 +11776,7 @@
             "radius": 393216
         },
         {
-            "flags": 528,
+            "flags": 2147484176,
             "health": 1000,
             "height": 1048576,
             "id": -1,
@@ -11826,7 +11826,7 @@
             "radius": 655360
         },
         {
-            "flags": 67088,
+            "flags": 2147550736,
             "health": 1000,
             "height": 524288,
             "id": -1,
@@ -11851,7 +11851,7 @@
             "radius": 393216
         },
         {
-            "flags": 67088,
+            "flags": 2147550736,
             "health": 1000,
             "height": 524288,
             "id": -1,
@@ -11901,7 +11901,7 @@
             "radius": 720896
         },
         {
-            "flags": 67088,
+            "flags": 2147550736,
             "health": 1000,
             "height": 524288,
             "id": -1,
@@ -11926,7 +11926,7 @@
             "radius": 851968
         },
         {
-            "flags": 67088,
+            "flags": 2147550736,
             "health": 1000,
             "height": 524288,
             "id": -1,
@@ -11951,7 +11951,7 @@
             "radius": 851968
         },
         {
-            "flags": 67088,
+            "flags": 2147550736,
             "health": 1000,
             "height": 524288,
             "id": -1,
@@ -11976,7 +11976,7 @@
             "radius": 851968
         },
         {
-            "flags": 528,
+            "flags": 2147484176,
             "health": 1000,
             "height": 1048576,
             "id": -1,
@@ -12026,7 +12026,7 @@
             "radius": 1310720
         },
         {
-            "flags": 528,
+            "flags": 2147484176,
             "health": 1000,
             "height": 1048576,
             "id": -1,
@@ -12051,7 +12051,7 @@
             "radius": 1310720
         },
         {
-            "flags": 528,
+            "flags": 2147484176,
             "health": 1000,
             "height": 1048576,
             "id": -1,
@@ -12426,7 +12426,7 @@
             "radius": 1310720
         },
         {
-            "flags": 8388609,
+            "flags": 2155872257,
             "health": 1000,
             "height": 1048576,
             "id": 2013,
@@ -12451,7 +12451,7 @@
             "radius": 1310720
         },
         {
-            "flags": 8388609,
+            "flags": 2155872257,
             "health": 1000,
             "height": 1048576,
             "id": 2022,
@@ -12501,7 +12501,7 @@
             "radius": 1310720
         },
         {
-            "flags": 8388609,
+            "flags": 2155872257,
             "health": 1000,
             "height": 1048576,
             "id": 2024,
@@ -12601,7 +12601,7 @@
             "radius": 1310720
         },
         {
-            "flags": 8388609,
+            "flags": 2155872257,
             "health": 1000,
             "height": 1048576,
             "id": 83,
