@@ -12225,7 +12225,7 @@
             "radius": 1310720
         },
         {
-            "flags": 528,
+            "flags": 2147484176,
             "health": 1000,
             "height": 1048576,
             "id": -1,
@@ -12300,7 +12300,7 @@
             "radius": 720896
         },
         {
-            "flags": 528,
+            "flags": 2147484176,
             "health": 1000,
             "height": 1048576,
             "id": -1,
@@ -12350,7 +12350,7 @@
             "radius": 3145728
         },
         {
-            "flags": 67088,
+            "flags": 2147550736,
             "health": 1000,
             "height": 524288,
             "id": -1,
@@ -12525,7 +12525,7 @@
             "radius": 1572864
         },
         {
-            "flags": 67088,
+            "flags": 2147550736,
             "health": 1000,
             "height": 524288,
             "id": -1,
@@ -12850,7 +12850,7 @@
             "radius": 393216
         },
         {
-            "flags": 528,
+            "flags": 2147484176,
             "health": 1000,
             "height": 1048576,
             "id": -1,
@@ -12900,7 +12900,7 @@
             "radius": 655360
         },
         {
-            "flags": 67088,
+            "flags": 2147550736,
             "health": 1000,
             "height": 524288,
             "id": -1,
@@ -12925,7 +12925,7 @@
             "radius": 393216
         },
         {
-            "flags": 67088,
+            "flags": 2147550736,
             "health": 1000,
             "height": 524288,
             "id": -1,
@@ -12975,7 +12975,7 @@
             "radius": 720896
         },
         {
-            "flags": 67088,
+            "flags": 2147550736,
             "health": 1000,
             "height": 524288,
             "id": -1,
@@ -13000,7 +13000,7 @@
             "radius": 851968
         },
         {
-            "flags": 67088,
+            "flags": 2147550736,
             "health": 1000,
             "height": 524288,
             "id": -1,
@@ -13025,7 +13025,7 @@
             "radius": 851968
         },
         {
-            "flags": 67088,
+            "flags": 2147550736,
             "health": 1000,
             "height": 524288,
             "id": -1,
@@ -13050,7 +13050,7 @@
             "radius": 851968
         },
         {
-            "flags": 528,
+            "flags": 2147484176,
             "health": 1000,
             "height": 1048576,
             "id": -1,
@@ -13100,7 +13100,7 @@
             "radius": 1310720
         },
         {
-            "flags": 528,
+            "flags": 2147484176,
             "health": 1000,
             "height": 1048576,
             "id": -1,
@@ -13125,7 +13125,7 @@
             "radius": 1310720
         },
         {
-            "flags": 528,
+            "flags": 2147484176,
             "health": 1000,
             "height": 1048576,
             "id": -1,
@@ -13500,7 +13500,7 @@
             "radius": 1310720
         },
         {
-            "flags": 8388609,
+            "flags": 2155872257,
             "health": 1000,
             "height": 1048576,
             "id": 2013,
@@ -13525,7 +13525,7 @@
             "radius": 1310720
         },
         {
-            "flags": 8388609,
+            "flags": 2155872257,
             "health": 1000,
             "height": 1048576,
             "id": 2022,
@@ -13575,7 +13575,7 @@
             "radius": 1310720
         },
         {
-            "flags": 8388609,
+            "flags": 2155872257,
             "health": 1000,
             "height": 1048576,
             "id": 2024,
@@ -13675,7 +13675,7 @@
             "radius": 1310720
         },
         {
-            "flags": 8388609,
+            "flags": 2155872257,
             "health": 1000,
             "height": 1048576,
             "id": 83,
